add JWT functions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <input type="text" id="message" placeholder="Enter your message"><br><br>
     <button onclick="signMessage()">Sign</button><br><br>
 
+    <button onclick="convertToJWK()">Convert to JWK</button>
+    <button onclick="verifyWithCryptoAPI()">Verify with Crypto API</button><br><br>
+
     <div id="output"></div>
 
     <script src="math.js"></script>
